Fixed bug where signup panel wouldn't be sized correctly on mobile

--- a/frontend/gui/src/containers/index.css
+++ b/frontend/gui/src/containers/index.css
@@ -584,6 +584,7 @@ button {
 
 .signupPanelBody {
     width: 100%;
+    padding: 0 20px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -597,11 +598,9 @@ button {
     color: #404142;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
-    flex: 0 0 430px;
-    margin: 0 0 0 20px;
-    height: 94px;
+    min-width: 430px;
 }
 
 .signupPanelInput {
@@ -622,6 +621,11 @@ button {
     border: none;
     border-radius: 4px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08) !important;
+    transition: width 0s;
+}
+
+.signupPanelInput a:hover {
+    color: white;
 }
 
 .signupPanelFillerLR {
@@ -635,22 +639,44 @@ button {
 @media screen and (max-width: 900px) {
     .signupPanelBody {
         flex-direction: column;
+        align-items: flex-start;
+        max-width: 470px;
         /* helps vertically center it better */
         margin: -8px 0 0 0;
+    }
+    .signupPanelReadyText {
+        min-width: 0;
+        width: 100%;
+        margin: 0;
+        align-items: flex-start;
     }
     .signupPanelFillerM {
         display: none;
     }
     .signupPanelInput {
-        justify-content: start;
-        padding: 15px 0 0 0;
-        min-width: 430;
-    }
-    .signupPanelReadyText {
-        flex: 0;
-        margin: 0;
+        /* width: 430px; */
+        /* margin: 0 96px 0 0; */
+        /* flex: 0 1 430px; */
         align-items: flex-start;
+        padding: 15px 0 0 0;
     }
+    .signupPanelInputFiller {
+        /* flex: 0 1 96px; */
+        max-width: 96px;
+    }
+    .signupPanelInputButton {
+        /* margin: 0; */
+    }
+    .signupPanelEmail {
+        width: 190px;
+    }
+}
+
+@media screen and (max-width: 345px) {
+    .signupPanelEmail {
+        width: 150px;
+    }
+
 }
 
 /*
